--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "file-loader": "^6.2.0",
     "next": "10.0.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "url-loader": "^4.1.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
