--- a/package.json
+++ b/package.json
@@ -6,17 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc"
+    "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc",
+    "test": "jest"
+  },
+  "jest": {
+    "automock": false,
+    "setupFiles": [
+      "./setupJest.js"
+    ]
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "abort-controller": "^3.0.0",
     "file-loader": "^6.2.0",
     "next": "10.0.8",
+    "node-fetch": "^2.6.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "timeout-signal": "^1.1.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.2.1"
   }
 }
